add service worker

--- a/app/scss/_theme.scss
+++ b/app/scss/_theme.scss
@@ -6,7 +6,8 @@ $accent-color:         #1fbad6;
 $primary-text-color:   #000;
 $secondary-text-color: #c0c0c0;
 $divider-color:        #f8f8f9;
-$additional-color-one: #5c7de6;
+$additional-color-one: #4664c3;
+$additional-color-one-a11y:#5d7fe8;
 $additional-color-two: #86dbc1;
 
 
