--- a/app/css/main.css
+++ b/app/css/main.css
@@ -141,7 +141,7 @@ ul, li {
   color: #000; }
 
 a {
-  color: #5c7de6;
+  color: #4664c3;
   text-decoration: none;
   cursor: pointer; }
 
@@ -151,6 +151,9 @@ a:hover, a:focus {
 
 a img {
   border: none 0px #fff; }
+
+strong {
+  color: #5d7fe8; }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
@@ -445,8 +448,8 @@ nav h1 a {
   padding: 0 20px 10px; }
 
 .rating-btn {
-  background-color: #86dbc1;
-  color: #fff;
+  background-color: #535353;
+  color: #FFFFFF;
   display: inline-block;
   font-size: 10pt;
   margin: 0.5em 0 0;
