--- a/app/scss/_styles.scss
+++ b/app/scss/_styles.scss
@@ -33,6 +33,9 @@ a:hover, a:focus {
 a img{
 	border: none 0px #fff;
 }
+strong{
+	color: $additional-color-one-a11y;
+}
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
@@ -349,8 +352,8 @@ nav h1 a {
 	padding: 0 20px 10px;
 }
 .rating-btn {
-	background-color: $additional-color-two;
-  color: #fff;
+	background-color: $primary-color-light;
+  color: $primary-color-text;
   display: inline-block;
   font-size: 10pt;
   margin: 0.5em 0 0;
