updates CSS architecture + add ARIA roles to few elements + improved service worker to cache restaurants.html only once

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,4 +1,8 @@
+// inspired from Bootstrap
+@import 'variables';
 @import 'grid-sys';
 @import 'theme';
+@import 'global';
+@import 'layout';
 @import 'styles';
-@import 'responsive';
+@import 'media';
