--- a/app/css/main.css
+++ b/app/css/main.css
@@ -99,44 +99,34 @@ html {
     flex: 0 0 100%;
     max-width: 100%; } }
 
-/*
-$primary-color-dark:   #303F9F;
-$primary-color:        #3F51B5;
-$primary-color-light:  #C5CAE9;
-$primary-color-text:   #FFFFFF;
-$accent-color:         #FF5252;
-$primary-text-color:   #212121;
-$secondary-text-color: #727272;
-$divider-color:        #B6B6B6;
-*/
-/*
-$primary-color-dark:   #388E3C;
-$primary-color:        #4CAF50;
-$primary-color-light:  #C8E6C9;
-$primary-color-text:   #FFFFFF;
-$accent-color:         #FF4081;
-$primary-text-color:   #212121;
-$secondary-text-color: #727272;
-$divider-color:        #B6B6B6;
-*/
-/* CSS Document */
+*,
+*::before,
+*::after {
+  box-sizing: border-box; }
+
 html {
+  font-size: 1rem;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -ms-overflow-style: scrollbar;
+  -webkit-tap-highlight-color: transparent;
   color: #000;
   background-color: #FFFFFF; }
 
-body, td, th, p {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  box-sizing: border-box; }
-
 body {
-  background-color: #FFFFFF;
   margin: 0;
-  /* position:relative; */ }
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: left; }
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible; }
 
 ul, li {
-  font-family: Arial, Helvetica, sans-serif;
   font-size: 10pt;
   color: #000; }
 
@@ -149,6 +139,10 @@ a:hover, a:focus {
   color: #86dbc1;
   text-decoration: none; }
 
+img {
+  vertical-align: middle;
+  border-style: none; }
+
 a img {
   border: none 0px #fff; }
 
@@ -156,14 +150,14 @@ strong {
   color: #5d7fe8; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px; }
 
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block; }
 
 table {
-  background-color: #f8f8f9; }
+  background-color: #f8f8f9;
+  border-collapse: collapse; }
 
 /* helper classes */
 /* https://css-tricks.com/centering-css-complete-guide/ */
@@ -175,7 +169,6 @@ table {
 .float-right {
   float: right; }
 
-/* main CSS */
 #maincontent {
   background-color: #FFFFFF;
   min-height: 100%;
@@ -212,7 +205,7 @@ nav h1 {
 nav h1 a {
   color: #fff;
   font-size: 14pt;
-  font-weight: 200;
+  font-weight: 300;
   letter-spacing: 10px;
   text-transform: uppercase; }
 
@@ -245,7 +238,7 @@ nav h1 a {
 #map {
   height: 400px;
   width: 100%;
-  background-color: #ccc; }
+  background-color: #535353; }
 
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
@@ -260,14 +253,13 @@ nav h1 a {
 .filter-options h2 {
   color: white;
   font-size: 1rem;
-  font-weight: normal;
+  font-weight: 400;
   line-height: 1;
   margin: 10px 20px 0px; }
 
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
@@ -292,7 +284,6 @@ nav h1 a {
 #restaurants-list li {
   background-color: #f8f8f9;
   border: 2px solid #535353;
-  font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
   text-align: left;
@@ -308,14 +299,12 @@ nav h1 a {
   object-fit: cover; }
 
 #restaurants-list li h2 {
-  font-family: Arial,sans-serif;
   font-size: 14pt;
-  font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
-  font-weight: 400;
+  font-weight: 700;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis; }
@@ -368,9 +357,8 @@ nav h1 a {
   /* width: 100%; */ }
 
 #restaurant-name {
-  font-family: Arial,sans-serif;
   font-size: 20pt;
-  font-weight: 200;
+  font-weight: 300;
   letter-spacing: 0;
   margin: 0.5em 1.5em 1em;
   text-transform: uppercase;
@@ -386,7 +374,7 @@ nav h1 a {
   font-size: 12pt;
   margin: 0;
   padding-top: 0.5em;
-  font-weight: 600;
+  font-weight: 700;
   background-color: #f8f8f9; }
 
 #restaurant-cuisine {
