--- a/app/scss/_styles.scss
+++ b/app/scss/_styles.scss
@@ -1,138 +1,4 @@
-@charset "utf-8";
-/* CSS Document */
 
-html {
-	color: $primary-text-color;
-	background-color: $primary-color;
-}
-body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 16px;;
-	line-height: 1.5;
-	box-sizing: border-box;
-}
-body {
-	background-color: $primary-color;
-	margin: 0;
-	/* position:relative; */
-}
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: $primary-text-color;
-}
-a {
-	color: $additional-color-one;
-	text-decoration: none;
-	cursor: pointer;
-}
-a:hover, a:focus {
-	color: $additional-color-two;
-	text-decoration: none;
-}
-a img{
-	border: none 0px #fff;
-}
-strong{
-	color: $additional-color-one-a11y;
-}
-h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
-}
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-table {
-	background-color: $divider-color;
-}
-/* helper classes */
-/* https://css-tricks.com/centering-css-complete-guide/ */
-.verticle-align {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-}
-.float-right {
-	float: right;
-}
-
-
-/* main CSS */
-#maincontent {
-  background-color: $primary-color;
-  min-height: 100%;
-	width: 100%;
-}
-#footer {
-  background-color: $primary-color-dark;
-  color: $primary-color-text;
-  font-size: 8pt;
-  letter-spacing: 1px;
-  padding: 25px;
-  text-align: center;
-  text-transform: uppercase;
-  justify-content: center;
-}
-/* ====================== Header ====================== */
-header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}
-/* ====================== Navigation ====================== */
-nav {
-  width: 100%;
-  height: 80px;
-  background-color: $primary-color-dark;
-  text-align:center;
-}
-nav h1 {
-  margin: auto;
-	padding-top: 10px;
-}
-nav h1 a {
-  color: #fff;
-  font-size: 14pt;
-  font-weight: 200;
-  letter-spacing: 10px;
-  text-transform: uppercase;
-}
-#maincontent {
-	margin-top: 80px;
-}
-#breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-}
-
-/* Display list items side by side */
-#breadcrumb li {
-    display: inline;
-}
-
-/* Add a slash symbol (/) before/behind each list item */
-#breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
-}
-
-/* Add a color to all links inside the list */
-#breadcrumb li a {
-    // color: #0275d8;
-    // text-decoration: none;
-}
-
-/* Add a color on mouse-over */
-#breadcrumb li a:hover {
-    // color: #01447e;
-    // text-decoration: underline;
-}
 /* ====================== Map ====================== */
 #map-container {
 	/* margin-bottom: 2em; */
@@ -140,7 +6,7 @@ nav h1 a {
 #map {
   height: 400px;
   width: 100%;
-  background-color: #ccc;
+  background-color: $primary-color-light;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
@@ -155,7 +21,7 @@ nav h1 a {
 .filter-options h2 {
   color: white;
   font-size: 1rem;
-  font-weight: normal;
+  font-weight: $font-weight-normal;
   line-height: 1;
   margin: 10px 20px 0px;
 }
@@ -164,7 +30,6 @@ nav h1 a {
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
@@ -191,7 +56,6 @@ nav h1 a {
 #restaurants-list li {
   background-color: $divider-color;
   border: 2px solid $primary-color-light;
-  font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
   text-align: left;
@@ -208,14 +72,12 @@ nav h1 a {
 }
 #restaurants-list li h2 {
   // color: #f18200;
-  font-family: Arial,sans-serif;
   font-size: 14pt;
-  font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
-	font-weight: 400;
+	font-weight: $font-weight-bolder;
 	white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -271,9 +133,8 @@ nav h1 a {
   /* width: 100%; */
 }
 #restaurant-name {
-  font-family: Arial,sans-serif;
   font-size: 20pt;
-  font-weight: 200;
+  font-weight: $font-weight-light;
   letter-spacing: 0;
   margin: 0.5em 1.5em 1em;
   text-transform: uppercase;
@@ -289,14 +150,14 @@ nav h1 a {
   font-size: 12pt;
   margin: 0;
 	padding-top: 0.5em;
-	font-weight: 600;
+	font-weight: $font-weight-bolder;
 	background-color: $divider-color;
 }
 #restaurant-cuisine {
   background-color: $primary-color-dark;
   color: $primary-color-text;
   font-size: 12pt;
-  font-weight: 300;
+  font-weight: $font-weight-light;
   letter-spacing: 10px;
   margin: 1em 0 0;
   padding: 2px 0;
@@ -317,7 +178,7 @@ nav h1 a {
 } */
 #reviews-container h2 {
   font-size: 24pt;
-  font-weight: 300;
+  font-weight: $font-weight-light;
   letter-spacing: -1px;
   padding-bottom: 1pt;
 }
