--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,9 +1,10 @@
 // inspired from Bootstrap
-@import 'variables';
-@import 'grid-sys';
-@import 'theme';
-@import 'global';
-@import 'layout';
-@import 'styles';
-@import 'review-form';
-@import 'media';
+@import "variables";
+@import "grid-sys";
+@import "theme";
+@import "global";
+@import "layout";
+@import "styles";
+@import "review-form";
+@import "media";
+@import "loader";
